@@ -1,4 +1,9 @@
 #!/usr/bin/env python
+'''
+$Rev::                                  $:  Revision of last commit
+$Author::                               $:  Author of last commit
+$Date::                                 $:  Date of last commit
+'''
 # -*- coding: UTF-8 -*-
 # generated by wxGlade 0.4.1 on Tue Sep  4 21:25:55 2007
 
@@ -135,6 +140,8 @@ class MainFrame(wx.Frame):
         self.mb_view.AppendMenu(wx.NewId(), "y scale", mb_view_yscale, "")
         self.mb_view_autoscale = wx.MenuItem(self.mb_view, wx.NewId(), "Autoscale", "Sets autoscale on when plotting", wx.ITEM_CHECK)
         self.mb_view.AppendItem(self.mb_view_autoscale)
+        self.mb_use_toggle_show = wx.MenuItem(self.mb_view, wx.NewId(), "Use Toggle Show", "Set if the plotted data shold be toggled or selcted by the mouse", wx.ITEM_CHECK)
+        self.mb_view.AppendItem(self.mb_use_toggle_show)
         self.main_frame_menubar.Append(self.mb_view, "View")
         self.mb_fit = wx.Menu()
         self.mb_fit_simulate = wx.MenuItem(self.mb_fit, wx.NewId(), "&Simulate\tF9", "Compile the script and run the Sim function", wx.ITEM_NORMAL)
@@ -242,6 +249,7 @@ class MainFrame(wx.Frame):
         self.Bind(wx.EVT_MENU, self.eh_mb_view_yscale_log, self.mb_view_yscale_log)
         self.Bind(wx.EVT_MENU, self.eh_mb_view_yscale_linear, self.mb_view_yscale_lin)
         self.Bind(wx.EVT_MENU, self.eh_mb_view_autoscale, self.mb_view_autoscale)
+        self.Bind(wx.EVT_MENU, self.eh_mb_view_use_toggle_show, self.mb_use_toggle_show)
         self.Bind(wx.EVT_MENU, self.eh_tb_simulate, self.mb_fit_simulate)
         self.Bind(wx.EVT_MENU, self.eh_mb_fit_evaluate, self.mb_fit_evaluate)
         self.Bind(wx.EVT_MENU, self.eh_mb_fit_start, self.mb_fit_start)
@@ -740,6 +748,11 @@ class MainFrame(wx.Frame):
 
     def eh_mb_fom_help(self, event): # wxGlade: MainFrame.<event_handler>
         event_handlers.fom_help(self, event)
+
+    def eh_mb_view_use_toggle_show(self, event):
+        new_val = self.mb_use_toggle_show.IsChecked()
+        self.data_list.list_ctrl.SetShowToggle(new_val)
+
 
 # end of class MainFrame
 
